Remove profile button

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -4,11 +4,11 @@
   <h1 class="header--title">FourLists</h1>
 
 
-  <div class="header--group">
+  <!-- <div class="header--group">
     <button class="header--btn" ui-sref="profile">
       <i class="material-icons">person</i>
     </button>
-  </div>
+  </div> -->
 
 
 </div>
