Change the page title

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,7 +1,7 @@
 <div class="header">
 
 
-  <h1 class="header--title">FourLists</h1>
+  <h1 class="header--title">Fourlists</h1>
 
 
   <!-- <div class="header--group">
