--- a/www/css/style.css
+++ b/www/css/style.css
@@ -84,7 +84,7 @@ body {
 .header--title {
   margin: 0;
   padding: 14px 1rem;
-  font-weight: 500;
+  font-weight: 300;
   font-size: 20px;
   color: rgba(0, 0, 0, 0.4);
 }
@@ -150,7 +150,7 @@ body {
   position: relative;
   width: 100%;
   height: 100%;
-  padding: 8px 8px 0;
+  padding: 0 8px 8px;
 }
 
 .lists--row {
@@ -165,7 +165,7 @@ body {
   width: 50%;
   height: 50%;
   float: left;
-  padding: 0 8px 16px;
+  padding: 8px;
 }
 
 .list {
@@ -175,7 +175,7 @@ body {
   height: 100%;
   max-height: none;
   box-sizing: border-box;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
 }
 .list .header {
   display: none;
@@ -266,6 +266,7 @@ body {
   min-height: 32px;
   line-height: 1.125rem;
   font-size: 1rem;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .list--item--label {
@@ -277,7 +278,6 @@ body {
           align-self: flex-end;
   padding-bottom: 0.5rem;
   cursor: text;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 .list--item--label:focus {
   border-bottom-color: rgba(0, 0, 0, 0.6);
