--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -4,11 +4,14 @@
   <h1 class="header--title">Fourlists</h1>
 
 
-  <!-- <div class="header--group">
-    <button class="header--btn" ui-sref="profile">
+  <div class="header--group">
+    <!-- <button class="header--btn" ui-sref="profile">
       <i class="material-icons">person</i>
-    </button>
-  </div> -->
+    </button> -->
+    <a class="header--btn" ui-sref="addTask">
+      <i class="material-icons">add</i>
+    </a>
+  </div>
 
 
 </div>
