--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -55,10 +55,14 @@ body {
   justify-content: space-between;
 }
 
+.header--group {
+  display: flex;
+}
+
 .header--title {
   margin: 0;
-  padding: 14px 1rem;
-  // align-self: center;
+  padding: 1rem;
+  align-self: center;
   font-weight: 300;
   font-size: $header_title_font_size;
   color: $text_light_color;
@@ -232,7 +236,6 @@ body {
   margin-bottom: 0.5rem;
   min-height: 32px;
   line-height: 1.125rem;
-  font-size: 1rem;
   border-bottom: 1px solid $black-100;
 }
 
@@ -246,6 +249,7 @@ body {
   flex-grow: 1;
   align-self: flex-end;
   padding-bottom: 0.5rem;
+  font-size: 0.875rem;
   cursor: text;
 
   &:focus {
@@ -266,22 +270,27 @@ body {
 }
 
 
-// .modal {
-//   position: absolute;
-//   top: 0;
-//   right: 0;
-//   bottom: 0;
-//   left: 0;
-//   z-index: 9;
-//   display: table;
-//   visibility: hidden;
-//   width: 100%;
-//   height: 100%;
-//   background-color: #fff;
+.modal {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 9;
+  display: table;
+  visibility: hidden;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
 
-//   &__opened {
-//     visibility: visible;
-//   }
+  &__opened {
+    visibility: visible;
+  }
+}
+
+// .modal--header {
+//   @extend .header;
+//   background-color: #345;
 // }
 
 
