--- a/www/css/style.css
+++ b/www/css/style.css
@@ -8,8 +8,8 @@ button {
 }
 
 .animated {
-  -webkit-animation-duration: 600ms;
-          animation-duration: 600ms;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
   -webkit-animation-fill-mode: both;
           animation-fill-mode: both;
 }
@@ -81,9 +81,18 @@ body {
           justify-content: space-between;
 }
 
+.header--group {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 .header--title {
   margin: 0;
-  padding: 14px 1rem;
+  padding: 1rem;
+  -webkit-align-self: center;
+      -ms-flex-item-align: center;
+          align-self: center;
   font-weight: 300;
   font-size: 20px;
   color: rgba(0, 0, 0, 0.4);
@@ -265,7 +274,6 @@ body {
   margin-bottom: 0.5rem;
   min-height: 32px;
   line-height: 1.125rem;
-  font-size: 1rem;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
@@ -277,6 +285,7 @@ body {
       -ms-flex-item-align: end;
           align-self: flex-end;
   padding-bottom: 0.5rem;
+  font-size: 0.875rem;
   cursor: text;
 }
 .list--item--label:focus {
@@ -288,6 +297,23 @@ body {
 
 .list--item--button {
   visibility: hidden;
+}
+
+.modal {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 9;
+  display: table;
+  visibility: hidden;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+}
+.modal__opened {
+  visibility: visible;
 }
 
 input[type=text] {
