--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -10,25 +10,6 @@ $header_height: 48px;
 $header_title_font_size: 20px;
 
 
-// Typography
-//
-/* latin */
-@font-face {
-  font-family: 'Roboto Condensed';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Roboto Condensed'), local('RobotoCondensed-Regular'), url(https://fonts.gstatic.com/s/robotocondensed/v13/Zd2E9abXLFGSr9G3YK2MsDAdhzWOYhqHvOZMRGaEyPo.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-}
-@font-face {
-  font-family: 'Roboto Condensed';
-  font-style: normal;
-  font-weight: 700;
-  src: local('Roboto Condensed Bold'), local('RobotoCondensed-Bold'), url(https://fonts.gstatic.com/s/robotocondensed/v13/b9QBgL0iMZfDSpmcXcE8nHm2hrkyco9jQ3NKMXpgOBg.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-}
-
-
 // Style
 //
 html {
@@ -61,7 +42,7 @@ body {
 
 .header--title {
   margin: 0;
-  padding: 1rem;
+  padding: 0 1rem;
   align-self: center;
   font-weight: 300;
   font-size: $header_title_font_size;
@@ -111,187 +92,6 @@ body {
     width: 50%;
     text-align: center;
   }
-
-
-// #LISTS
-//
-.lists {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  padding: 0 8px 8px;
-}
-
-.lists--row {
-  display: flex;
-  width: 100%;
-  height: 50%;
-}
-
-.lists--col {
-  // display: flex;
-  width: 50%;
-  height: 50%;
-  float: left;
-  padding: 8px;
-}
-
-.list {
-  position: relative;
-  display: block;
-  // overflow: auto;
-  width: 100%;
-  height: 100%;
-  max-height: none;
-  // margin: 2px;
-  box-sizing: border-box;
-  // border-radius: 3px;
-  box-shadow: 0 1px 3px $black-200;
-
-  .header {
-    display: none;
-  }
-
-  .main {
-    height: 100%;
-    padding: 0.75rem;
-    // padding-bottom: 2.5rem;
-  }
-
-  .footer {
-    position: absolute;
-    bottom: 0;
-    z-index: 2;
-  }
-
-  &.opened {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 95;
-    border-radius: none;
-
-    .click_area {
-      visibility: hidden;
-    }
-
-    .header {
-      display: flex;
-    }
-
-    .main {
-      height: calc(100% - 48px);
-    }
-
-    .footer {
-      display: none;
-    }
-
-  }
-
-}
-.list__1, .list__1 .footer {
-  background: #FFCDD2;
-}
-.list__2, .list__2 .footer {
-  background: #FFE0B2;
-}
-.list__3, .list__3 .footer {
-  background: #FFF9C4;
-}
-.list__4, .list__4 .footer {
-  background: #DCEDC8;
-}
-
-.click_area {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 1;
-  cursor: pointer;
-}
-
-.form_add_task {
-  display: flex;
-  flex-grow: 1;
-}
-
-.list--title {
-  // min-height: 32px;
-  margin-bottom: 8px;
-  line-height: 1.25;
-  font-size: 0.75rem;
-  font-family: 'Roboto Condensed';
-  text-transform: uppercase;
-  font-weight: 700;
-  color: $text_light_color;
-}
-
-.list--item {
-  display: flex;
-  margin-bottom: 0.5rem;
-  min-height: 32px;
-  line-height: 1.125rem;
-  border-bottom: 1px solid $black-100;
-}
-
-// .list--item--checkbox {
-//   display: none;
-//   margin-right: 0.25rem;
-//   flex-shrink: 0;
-// }
-
-.list--item--label {
-  flex-grow: 1;
-  align-self: flex-end;
-  padding-bottom: 0.5rem;
-  font-size: 0.875rem;
-  cursor: text;
-
-  &:focus {
-    border-bottom-color: $text_medium_color;
-  }
-
-  &:focus ~ .list--item--button {
-    visibility: visible;
-  }
-}
-
-.list--item--button {
-  visibility: hidden;
-
-  // .list.opened & {
-  //   visibility: visible;
-  // }
-}
-
-
-.modal {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 9;
-  display: table;
-  visibility: hidden;
-  width: 100%;
-  height: 100%;
-  background-color: #fff;
-
-  &__opened {
-    visibility: visible;
-  }
-}
-
-// .modal--header {
-//   @extend .header;
-//   background-color: #345;
-// }
 
 
 // Overrides
