--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,8 @@
 @import 'reset';
+@import 'typography';
 @import 'animate';
 @import 'base';
 @import 'login';
+@import 'lists';
+@import 'modal';
 @import 'icon';
