--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -20,12 +20,19 @@ html {
 }
 
 body {
-  // display: flex;
   // overflow: hidden;
   // width: 100%;
   height: 100%;
   margin: 0;
-  // flex-direction: column;
+}
+
+.section {
+  display: flex;
+  flex-direction: column;
+  // overflow: hidden;
+  // width: 100%;
+  height: 100%;
+  margin: 0;
 }
 
 .header {
@@ -56,7 +63,7 @@ body {
   align-items: center;
   justify-content: center;
   min-width: 56px;
-  height: 48px;
+  height: $header_height;
   padding: 0 1rem;
   color: $text_medium_color;
   text-decoration: none;
@@ -76,10 +83,11 @@ body {
 
 .main {
   position: relative;
-  // max-width: 1024px;
-  height: calc(100% - 48px);
-  // margin: 0 auto;
-  padding: 0;
+  display: flex;
+  height: calc(100% - #{$header_height});
+  padding: 0.5rem;
+  flex-grow: 1;
+  flex-wrap: wrap;
 }
 
 .footer {
