--- a/scss/_lists.scss
+++ b/scss/_lists.scss
@@ -2,8 +2,9 @@
 //
 .lists {
   position: relative;
+  display: flex;
+  flex-wrap: wrap;
   width: 100%;
-  height: 100%;
   padding: 0 8px 8px;
 }
 
@@ -17,14 +18,13 @@
   // display: flex;
   width: 50%;
   height: 50%;
-  float: left;
   padding: 8px;
 }
 
 .list {
   position: relative;
-  display: block;
-  // overflow: auto;
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 100%;
   max-height: none;
@@ -39,8 +39,7 @@
 
   .main {
     height: 100%;
-    padding: 0.75rem;
-    // padding-bottom: 2.5rem;
+    flex-direction: column;
   }
 
   .footer {
@@ -49,7 +48,7 @@
     z-index: 2;
   }
 
-  &.opened {
+  &__opened {
     position: fixed;
     top: 0;
     right: 0;
@@ -114,6 +113,10 @@
   text-transform: uppercase;
   font-weight: 700;
   color: $text_light_color;
+
+  .list__opened & {
+    display: none;
+  }
 }
 
 .list--item {
