--- a/www/templates/modal.html
+++ b/www/templates/modal.html
@@ -3,7 +3,7 @@
   <header class="header">
 
     <div class="header--group">
-      <a class="header--btn" ui-sref="lists">
+      <a class="header--btn" ng-click="goBack()">
         <i class="material-icons">close</i>
       </a>
       <h1 class="header--title">Adicionar tarefa</h1>
