--- a/scss/_lists.scss
+++ b/scss/_lists.scss
@@ -5,7 +5,8 @@
   display: flex;
   flex-wrap: wrap;
   width: 100%;
-  padding: 0 8px 8px;
+  height: 100%;
+  padding: 0 8px;
 }
 
 .lists--row {
@@ -28,24 +29,12 @@
   width: 100%;
   height: 100%;
   max-height: none;
-  // margin: 2px;
   box-sizing: border-box;
-  // border-radius: 3px;
+  border-radius: 2px;
   box-shadow: 0 1px 3px $black-200;
 
   .header {
     display: none;
-  }
-
-  .main {
-    height: 100%;
-    flex-direction: column;
-  }
-
-  .footer {
-    position: absolute;
-    bottom: 0;
-    z-index: 2;
   }
 
   &__opened {
@@ -63,10 +52,6 @@
 
     .header {
       display: flex;
-    }
-
-    .main {
-      height: calc(100% - 48px);
     }
 
     .footer {
@@ -104,6 +89,13 @@
   flex-grow: 1;
 }
 
+.list--container {
+  @include container;
+  .list__opened & {
+    @include container-tablet;
+  }
+}
+
 .list--title {
   // min-height: 32px;
   margin-bottom: 8px;
@@ -121,8 +113,9 @@
 
 .list--item {
   display: flex;
-  margin-bottom: 0.5rem;
+  width: 100%;
   min-height: 32px;
+  margin-bottom: 0.5rem;
   line-height: 1.125rem;
   border-bottom: 1px solid $black-100;
 }
