--- a/scss/_lists.scss
+++ b/scss/_lists.scss
@@ -12,7 +12,7 @@ $list-4-color: #DCEDC8;
   flex-wrap: wrap;
   width: 100%;
   height: 100%;
-  padding: 0 8px;
+  // padding: 0 8px;
 }
 
 .lists--row {
@@ -25,7 +25,7 @@ $list-4-color: #DCEDC8;
   // display: flex;
   width: 50%;
   height: 50%;
-  padding: 8px;
+  // padding: 8px;
 }
 
 .list {
@@ -36,8 +36,8 @@ $list-4-color: #DCEDC8;
   height: 100%;
   max-height: none;
   box-sizing: border-box;
-  border-radius: 2px;
-  box-shadow: 0 1px 3px $black-200;
+  // border-radius: 2px;
+  // box-shadow: 0 1px 3px $black-200;
 
   .header {
     display: none;
